add taggItem Map